--- a/html/css/style.css
+++ b/html/css/style.css
@@ -271,26 +271,7 @@ body{
 	background-attachment: fixed;
 	z-index: 10;
 }
-#region_info_wrapper{
-	position: absolute;
-	left: 0%;
-	top: 0%;
-	height: 100%;
-	width: 100%;
-}
-#region_info{
-	position: absolute;
-	top: -50%;
-	left: 0px;
-	right: 0px;
-	height: 50%;
-	width: 100%;
-	background-color: #007aa7;
-	z-index: 20;
-	/*-webkit-box-shadow: inset 0 8px 6px -6px black;
-	-moz-box-shadow: inset 0 8px 6px -6px black;
-	box-shadow: inset 0 10px 60px -20px black;*/	
-}
+
 .svg_wrapper{
 	position: absolute;
 	width: 50%;
@@ -397,27 +378,82 @@ span{
 	display: none;
 }
 
-#panel_slider{
-	position: relative;
-	top: 0px;
+
+
+#top_panel{
+	position: absolute;
+	top: -60%;
+	width: 100%;
+	height: 60%;
+	
+}
+#bottom_panel{
+	position: absolute;
+	bottom: -90%;
+	width: 100%;
+	height: 90%;
+	
+}
+#region_info{
+	position: absolute;
+	top: 0%;
 	left: 0px;
 	right: 0px;
-	bottom: 0px;
-	height: auto;
+	height: 100%;
+	width: 100%;
+	background-color: #007aa7;
+	z-index: 20;
+	/*-webkit-box-shadow: inset 0 8px 6px -6px black;
+	-moz-box-shadow: inset 0 8px 6px -6px black;
+	box-shadow: inset 0 10px 60px -20px black;*/	
 }
 #region_history{
 	position: absolute;
 	width: 100%;
-	height: 40%;
+	height: 35%;
 	left: 0%;
-	top: -40%;	
+	top: 0%;	
 }
+#simulation{
+	position: absolute;
+	top: 35%;
+	left: 0px;
+	right: 0px;
+	opacity: 1;
+	height: 60%;
+	width: 100%;
+	border-top: 1px solid #e7e7e7;
+	background-color: #f4f4f4;
+	z-index: 30;
+		
+}
+
+#show_simulation{
+	text-align: center;
+}
+#show_current{
+	position: absolute;
+	height: auto;
+	opacity: 0;
+	bottom: 0%;
+	height: 15%;
+	width: 100%;
+	background: inherit;
+	text-align: center;
+}
+#show_current div{
+	padding-top: 10px;
+}
+
+#wrapper{
+	text-anchor: middle;
+}
+
 #nr_lives_improved{
 	padding-right: 0px!important;
 	font-size: 4em;
 	height: 70px;
 	color: #fff;
-	
 }
 .lives_improved_sub{
 	clear: both;
@@ -462,19 +498,7 @@ span{
 	opacity: .4;
 }
 
-#simulation{
-	position: absolute;
-	top: 90%;
-	left: 0px;
-	right: 0px;
-	opacity: 0;
-	height: 60%;
-	width: 100%;
-	border-top: 1px solid #e7e7e7;
-	background-color: #f4f4f4;
-	z-index: 30;
-		
-}
+
 #simulation_wrapper{
 	margin: 0px 30px;
 }
