--- a/html/css/style.css
+++ b/html/css/style.css
@@ -93,30 +93,43 @@ body{
 	height: 40px;
 	position: absolute;
 	top: 0px;
+	left: 0px;
+	padding: 10px 0 0 0;
+	text-align: center;
+	color: #fff;
+	font-size: 13px;
+	font-weight: bold;
+}
+.btn_apply{
+	width: 80px;
+	height: 40px;
+	position: absolute;
+	top: 0px;
 	right: 0px;
 	padding: 10px 0 0 0;
 	text-align: center;
 	color: #fff;
-	font-size: 15px;
+	font-size: 13px;
 	font-weight: bold;
+	display: none;
 }
 .panel_header{
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	
+	text-align: center;
 	width: 100%;
 	height: 40px;
 	background: #1f1f1f;
 	color: #fff;
 }
 .panel_header h2{
-	padding-left: 15px;
+	display: inline-block;
 }
 .panel_header .btn{
 	border: none;
 }
-#filter_panel .panel_header{
+/*#filter_panel .panel_header{
 	background: #272c2d url('../img/filter.svg') no-repeat 5px 11px;	
 	background-size: auto 45%!important;
 }
@@ -127,7 +140,7 @@ body{
 #bookmarks_panel .panel_header{
 	background: #272c2d url('../img/favorite.svg') no-repeat 5px 11px;	
 	background-size: auto 45%!important;	
-}
+}*/
 .modal_content{
 	position: absolute;
 	top: 40px;
@@ -200,7 +213,7 @@ body{
 	display: block;
 	width: 100%;
 	color: #fff;
-	font-size: 12px;
+	font-size: .7em;
 	overflow: hidden;
 	text-align: center;
 
@@ -285,12 +298,10 @@ path#arc_path, circle#background, path#arc_path_left{
 }
 
 path#arc_path {
-    opacity: 0.4;
-    stroke: #000000;
+
 }
 path#arc_path_left{
-    opacity: 0.6;
-    stroke: #000000;
+
 }
 circle#background{
 	stroke-opacity: .1;
@@ -758,15 +769,17 @@ input[type='range'] {
     z-index: 10000;
 }
 
-
+/* Lighting*/
 body.PD0100 input[type='range']{
 	border: 1px solid #7dba00;
 	background: #7dba00;
 }
+/* CL */
 body.PD0200 input[type='range'] {
 	border: 1px solid #68049c;
 	background: #68049c;
 }
+/* Healthcare */
 body.PD0900 input[type='range'] {
 	border: 1px solid #2badb5;
 	background: #2badb5;
@@ -778,6 +791,9 @@ body.philips input[type='range'] {
 
 body.PD0100 #region_info, body.PD0100 #region_history{
 	background: #7dba00;
+}
+body.PD0100 #arc_path{
+	
 }
 body.PD0200 #region_info, body.PD0200 #region_history{
 	background: #68049c;
