--- a/html/css/style.css
+++ b/html/css/style.css
@@ -471,8 +471,6 @@ span{
 .lives_improved_sub{
 	font-family: Verdana, arial;
 	font-size: 1em;
-	color: #000000;
-	opacity: .4;
 }
 #nr_gdp{
 	font-size: 2em;
@@ -480,8 +478,6 @@ span{
 #nr_gdp span, #nr_population span{
 	font-family:Verdana,arial;
 	font-size: 14px;
-	color: #000000;
-	opacity: 0.4;
 }
 #nr_population{
 	font-size: 2em;
@@ -489,14 +485,11 @@ span{
 
 #lives_improved_percentage{
 	font-size: 3.5em;
-	font-weight: bold;
 	fill: #fff;
 }
 #lives_improved_percentage_sub{
 	font-family: Verdana, arial;
 	font-size: 1em;
-	color: #000000;
-	opacity: .4;
 }
 
 
@@ -793,17 +786,54 @@ body.PD0100 #region_info, body.PD0100 #region_history{
 	background: #7dba00;
 }
 body.PD0100 #arc_path{
-	
+	stroke: #a2dc2b;
 }
+body.PD0100 #arc_path_left{
+	stroke: #446500;
+}
+body.PD0100 .nr_label, body.PD0100 #lives_improved_percentage_sub tspan, body.PD0100 #nr_lives_improved_label{
+	fill: #446500; 
+}
+
 body.PD0200 #region_info, body.PD0200 #region_history{
 	background: #68049c;
 }
+body.PD0200 #arc_path{
+	stroke: #9b4bc5;
+}
+body.PD0200 #arc_path_left{
+	stroke: #27003c;
+}
+body.PD0200 .nr_label, body.PD0200 #lives_improved_percentage_sub tspan, body.PD0200 #nr_lives_improved_label{
+	fill: #27003c; 
+}
+
 body.PD0900 #region_info, body.PD0900 #region_history {
 	background: #2badb5;
 }
+body.PD0900 #arc_path{
+	stroke: #64d3da;
+}
+body.PD0900 #arc_path_left{
+	stroke: #124a4d;
+}
+body.PD0900 .nr_label, body.PD0900 #lives_improved_percentage_sub tspan, body.PD0900 #nr_lives_improved_label{
+	fill: #124a4d; 
+}
+
 body.philips #region_info, body.philips #region_history {
 	background: #0b5ed7;
 }
+body.philips #arc_path{
+	stroke: #4286ea;
+}
+body.philips #arc_path_left{
+	stroke: #022a64;
+}
+body.philips .nr_label, body.philips #lives_improved_percentage_sub tspan, body.philips #nr_lives_improved_label{
+	fill: #022a64; 
+}
+
 
 body.PD0100 .slider_value{
 	color: #7dba00;
