--- a/html/css/style.css
+++ b/html/css/style.css
@@ -897,16 +897,14 @@ body.philips .slider_value {
 input[type='range']::-webkit-slider-thumb {  
     -webkit-appearance: none;
     width: 20px;
-    height: 20px;
-    border: 1px solid #ededed;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    background-color: #fff;
+    height: 60px;
+    border: 0px solid transparent;
+    background-color: transparent;
+
+    background-image: url('../img/slider_thumb.svg');
     background-repeat: no-repeat;
-    background-position: 50%;
-	-moz-box-shadow: 0px 0px 1px 1px #ccc;
-  	-webkit-box-shadow: 0px 0px 1px 1px #ccc;
-  	box-shadow: 0px 0px 1px 1px #ccc;
+	/*background-size: auto 100%!important;*/
+	background-position: 50% 50%;
   	z-index: 10000;
 }
 input#slidersales, input#slidergreensales{
