--- a/html/css/style.css
+++ b/html/css/style.css
@@ -903,7 +903,7 @@ input[type='range']::-webkit-slider-thumb {
     width: 24px;
     height: 60px;
     border: 0px solid transparent;
-    background-color: green;
+    background-color: transparent;
 
     background-image: url('../img/slider_thumb.svg');
     background-repeat: no-repeat;
